[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "sat-utils"
version = "1.0.4"
authors = [
  { name="Ryan Semmler", email="rsemmle@ncsu.edu" },
]
description = "Contains a collection of shared utility functions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = [
  "fastapi",
  "PyJWT",
  "slack-sdk",
  "pyodc",
  "cx-Oracle",
  "mysql-connector-python",
  "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.ncsu.edu/SAT/sat-utils"

[tool.flit.module]
name = "sat_utils"
