[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "sat-utils"
version = "1.1.2"
authors = [
  { name="Ryan Semmler", email="rsemmle@ncsu.edu" },
]
description = "Contains a collection of shared utility functions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.95.1, <1.0.0",
  "pyjwt>=2.6.0, <3.0.0",
  "slack-sdk>=3.21.0, <4.0.0",
  "pyodbc>=4.0.39, <5.0.0",
  "cx-Oracle>=8.3.0, <9.0.0",
  "mysql-connector-python>=8.0.33, <9.0.0",
  "requests>=2.29.0, <3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=6.2.5, <7.0.0",
  "pytest-mock>=3.10.0, <4.0.0",
  "pytest-cov>=4.0.0, <5.0.0",
  "coverage[toml]>=6.2",
  "black>=23.3.0, <24.0.0",
  "mypy>=1.2.0, <2.0.0",
  "ruff==0.0.263",
  "mkdocs-material>=9.1.6, <10.0.0",
  "Pygments>=2.10.0, <3.0.0",
  "bandit>=1.7.4, <2.0.0",
  "pre-commit>=2.16.0, <3.0.0",
  "isort>=5.10.1, <6.0.0",
  "pyupgrade>=2.29.1, <3.0.0",
  "ipython>=8.13.0, <9.0.0",
  "flit>=3.8.0, <4.0.0",
]

[project.urls]
"Homepage" = "https://github.ncsu.edu/SAT/sat-utils"

[tool.flit.module]
name = "sat_utils"
